--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.roadlover">
+    <!-- permission for accessing camera -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoadLover"
         android:usesCleartextTraffic="true">
-        <activity android:name=".CardListRecyclerView"></activity>
+        <activity android:name=".ImageCaptureActivity"></activity>
+        <activity android:name=".CardListRecyclerView" />
         <activity android:name=".RangeSliderActivity" />
         <activity android:name=".RecyclerViewActivity" /> <!-- <activity android:name=".MainActivity"> -->
         <!-- <intent-filter> -->
